Finalized the website information. Two bugs to fix: No profile picture. Navbar won't collapse.

--- a/MyWebsite/Content/Site.css
+++ b/MyWebsite/Content/Site.css
@@ -82,7 +82,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-    color: #bd5d38
+    color: #3500D3
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
